# fdd-defense

./: .gitignore  README.md  experiments.ipynb  experiments.py  pyproject.toml
.github/workflows/: python-package.yml
fdd_defense/: utils.py
fdd_defense/attackers/: __init__.py  base.py  carlini_wagner.py  deep_fool.py  distillation.py  fgsm.py  noattack.py  noise.py  pgd.py
fdd_defense/defenders/: __init__.py  adversarial_training.py  atonquant.py  autoencoder.py  base.py  defense_gan.py  distillation.py  nodefence.py  quantization.py  regularization.py
fdd_defense/models/: __init__.py  base.py  boosting.py  gru.py  linear.py  mlp.py  tcn.py
fdd_defense/tests/: test_attackers.py  test_defenders.py  test_models.py
tests/: test_attackers.py
